# event-driven-architecture

./: README.md
src/: consumer.py  consumer_runner.py  main.py  producer.py  pyproject.toml
src/events/: even_handler.py  event_types.py
